Added contents to smash burgers file
added all content to the smash burgers page along with image and recipe. all links functioning now.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    
+    <a href="recipes/Smash_burgers.html">Smash burgers recipe</a>
 </body>
 </html>
