--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/Smash_burgers.html">Smash burgers recipe</a>
+    <ul>
+        <li><a href="recipes/Smash_burgers.html">Smash burgers recipe</a></li>
+        <li><a href="recipes/Mac_and_cheese.html">Slow cooked Mac and Cheese recipe</a></li>
+    </ul>
 </body>
 </html>
