new htlm and styles added

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
-<body>
+<body class="home">
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="recipes/Smash_burgers.html">Smash burgers recipe</a></li>
+        <li><img src="images/Smash-Burgers.png"><a href="recipes/Smash_burgers.html">Smash burgers recipe</a></li>
         <li><a href="recipes/Mac_and_cheese.html">Slow cooked Mac and Cheese recipe</a></li>
     </ul>
 </body>
