--- a/recipes/Mac_and_cheese.html
+++ b/recipes/Mac_and_cheese.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mac and cheese</title>
+    <link rel="stylesheet" href="../mac.css"/>
 </head>
-<body>
+<body class="mac">
   <h1>Slow cooked Mac and Cheese</h1>
-    <img src="../images/Mac-and-cheese.png"
-    <p>This is a delicious recipe for slow cooked mac and cheese that can easily be made at home in your own crock pot!</p>
+  <div class="flex">
+  <div class="image"><img src="../images/Mac-and-cheese.png"/> </div>
+  <div class="card"><p>This is a delicious recipe for slow cooked mac and cheese that can easily be made at home in your own crock pot!</p>
   <h2>Ingredients</h2>
     <ul>
         <li>1 (16 ounce) package elbow macaroni</li>
@@ -22,7 +24,9 @@
         <li>1 (10.5 ounce) can condensed Cheddar cheese soup (such as Campbell's®)</li>
         <li>1 pinch paprika, or as desired (Optional)</li>
     </ul>
-  <h2>
+    </div>
+    </div>
+  <h2>Instructions</h2>
     <ol>
         <li>Fill a large pot with lightly salted water and bring to a rolling boil. 
     Stir in macaroni and return to a boil. Cook pasta uncovered, stirring occasionally, until tender yet firm to the bite, about 8 minutes. 
@@ -42,6 +46,5 @@
 
         </li>
     </ol>
-  </h2>
 </body>
 </html>
