--- a/recipes/Smash_burgers.html
+++ b/recipes/Smash_burgers.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Smash Burgers</title>
+    <link rel="stylesheet" href="../burger.css"/>
 </head>
-<body>
+<body class="burger">
     <h1>Smash Burgers</h1>
     <img src="../images/Smash-Burgers.png">
     <p>A smash burger is a burger that is made by smashing the ground beef onto the grill or griddle with a spatula. Smashing the burger results in a sear on the outside of the meat, which locks in all of the juices and flavor.
